"indecision-app": add style to modal

--- a/indecision-app/src/styles/styles.scss
+++ b/indecision-app/src/styles/styles.scss
@@ -6,3 +6,4 @@
 @import './components/widget';
 @import './components/option';
 @import './components/add_option';
+@import './components/option_modal';
